assets/css/style.css
/* ... */
.cbi--3dprinter-printing {
  display: inline-block;
  color: var(--brand-color-secondary);
  width: 5em;
  height: 2.8em;
  --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23000' d='M3.32.954S2.388.78 2.388 2.138c0 1.359.222 18.01.222 18.01s.379.663.521.631c.141-.03 2.546-.358 2.577-.363l.017-.002l.013-4.004l.012-3.9l4.259-.001l-.004-.305l-4.254-.054l.005-1.616l5.04.057l.012-.322l-5.05-.117l.017-6.148s-.056-.673.354-.673s10.856.377 10.856.377s.343.012.354.257c.005.107.003 3.4.004 5.959l-1.068.114l.002.315l-4.215-.062l-.006.338l4.244.058l.005 1.535l-2.39.017l-.002.296l2.377-.023l.003.235h1.053c0 1.01.002 1.713 0 2.43c.542.158 1.385.435 1.385.435l-1.403.21c0 .223.002.572.005.923l-.93-.35l-.654.083l1.585.589l.003.367l2.072-.291l-.007-14.759s.01-.546-.564-.564C18.263 1.803 3.32.954 3.32.954m6.26 8.662l-.005.55l1.303.032l-.03.869l-.79-.02l.021 1.8l.284-.03l.007.35l.969.03v.566a.034.034 0 0 1 .033.033v.013l.238.12a.033.033 0 0 1 .016.014a.033.033 0 0 1 .002.02a.029.029 0 0 1-.002.006l.417.12l-.02-2.048a.067.067 0 0 1 .016-.018c.02 0 1.736-.007 1.736-.018l.002-.947l-1.796.013l.03-1.331zm4.193 2.474l-1.618.017l.02 1.91l1.598-.044zm-2.434 1.706l-.158.157l.21.21l.205-.204l-.257-.13zm2.425.405c-.029 0-7.873.896-7.873.896l3.197 1.718l9.556-1.209s-4.85-1.405-4.88-1.405m-7.923.925l.01.495l.217.113l.618.02l2.121 1.164l-.257.186l.412.288l1.308-.113l.33-.186l6.293-.793l.36.062l-.03-.515l-8.168 1.04zm.649 1.283l-.706.02l-.01 4.002l.84-.176l-.037-.932l3.276 2.488s-.026.453.03.87c.057.417.613.37.613.37l1.293-.277l.2-.242l7.957-1.525l.212.206l1.158-.247c.119-.026.211-.2.273-.314c.062-.113-.024-1.802-.005-2.333c.016-.445-.08-.425-.129-.438l-.757.134s-.208.057-.314.01c-.174-.076-.154-.205-.154-.205s.01-.222-.067-.469c-.077-.247-.258-.211-.258-.211l-7.08.994s-.372.058-.695.14l-1.802-.99l-.041.023a.033.033 0 0 1-.014.004l-.526.046l2.018 1.065c-.003.007-.037.009-.038.016c-.097.882-.202.989-.463 1.03l-1.385.195l-3.08-2.111Z'/%3E%3C/svg%3E");
  background-color: currentColor;
  -webkit-mask-image: var(--svg);
  mask-image: var(--svg);
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
  -webkit-mask-size: 100% 100%;
  mask-size: 100% 100%;
}


/* BODY */
* {
  font-family: var(--font-style);
  margin: 0;
}

.head1 {
  color: var(--brand-color-primary);
  font-weight: bolder;
}

.head2 {
  color: var(--brand-color-secondary);
  font-weight: bolder;
  margin: 1em;
}

.head5 {
  color: var(--brand-color-secondary);
  font-weight: bold;
  margin-left: 1em;
}

.head6 {
  color: var(--brand-color-secondary);
}

.p-home {
  color: var(--brand-color-secondary);
  margin-top: -0.5em;
}

.anchors {
  text-decoration: none;
  color: var(--font-light);
}

/* NAVBAR */
.logo-img {
  width: 10em;
}

#btn-bg-clr {
  background-color: var(--brand-color-primary);
  border: none;
  color: #fff;
}

/* HOME */
#home {
  background: radial-gradient(rgba(var(--bg-rgb-1), 0.200), rgba(var(--bg-rgb-2), 0.900));
  background-position: center;
  background-repeat: no-repeat;
}

.bg-video {
  position: absolute;
  z-index: -99;
  object-fit: cover;
  width: 100vw;
  height: 100vh;
}

/* PROJECTS */
.image-wrap {
  border-radius: 15px;
  background: linear-gradient(rgba(var(--bg-rgb-1), 0.100), rgba(var(--bg-rgb-1), 0.100), rgba(var(--bg-rgb-dark), 0.500));
}


.prj-img {
  border-radius: 15px;
  position: relative;
  z-index: -99;
}

.prj-head{
  font-weight: bold;
  text-shadow: 1px 1px 18px #545454;
  color: var(--font-light);
}

.prj-link{
  text-shadow: 1px 1px 18px #545454;
}

.text-pos {
  margin-top: -4em;
  margin-left: 1em;
}

/* SERVICES */

ul,li{
  list-style: none;
  margin-left: -0.3em;
}


/* LETS TALK */
#letstalk {
  background: radial-gradient(rgba(var(--bg-rgb-1), 0.200), rgba(var(--bg-rgb-2), 0.900));
}

.btn-form{
  background-color: #fff;
}

.form-inp{
  background-color: var(--font-light);
  border: none;
  width: 60%;
  height: 3em;
  padding: 1em;
  border-radius: 8px;
}

#message{
  height: auto;
}

/* FOOTER */
.social-icons{
  margin-left: 1.2em;
}

.footer-service{
  margin-left: -0.4em;
}

/*
 @media (max-width: 991px) {
      #nav1, #navbarNav {
        margin: auto; 
        margin-bottom: 10px;
        padding: 10px;
        position: relative;
        border-radius: 10px;
        background-color: white;
      }
      nav{
        background-color: transparent !important;
      }
    }
    body{
        background-color: blue;
    }
    nav{
        background-color: white;
        border-radius: 10px;
        margin-top: 10px;   
    }
    #Logo{
      margin-left: 20%;
    }
    .nav-link{
      display: flex;
      justify-content: flex-start;    
    }
    .nav-link:active{
      color:var(--brand-color-primary) !important;
    }

    */

